# ALDER

./: .clinerules  .gitignore  .godotignore  LICENSE  README.md  alder.code-workspace  dev-log.md  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot  pyproject.toml
data/species/: alsike_clover_aurora.yaml  birdsfoot_trefoil_leo.yaml  burnet_forage_herb.yaml  chicory_puna_endure.yaml  cocksfoot_donata.yaml  english_longhorn_cattle.yaml  festulolium_lofa.yaml  goat_willow.yaml  lucerne_mezzo.yaml  lucerne_plato.yaml  meadow_fescue_laura.yaml  perennial_ryegrass_calibra.yaml  perennial_ryegrass_oakpark.yaml  red_clover_altaswede.yaml  red_clover_milvus.yaml  ribgrass_plantain_tonic.yaml  sainfoin_commercial.yaml  sheeps_parsley_forage_herb.yaml  sweet_clover_commercial.yaml  tall_fescue_bardoux.yaml  timothy_comer.yaml  white_clover_merwi.yaml  yarrow_forage_herb.yaml
src/alder/: api.py
src/alder/core/: site.py  species_loader.py  species_record.py  wrapped_value.py
src/alder/modules/: calculators.py  terrain.py
tests/: test_nitrogen_fixation.py  test_species_loader.py  test_species_record.py  test_wrapped_value.py  test_wrapped_value_species_record.py
